# LangGraph-research-paper-generation

./: README.md  langgraph.json  pyproject.toml
notebook/: final_document_eval.ipynb  section_generation_evals.ipynb  tavily.ipynb
src/: agent.py  configuration.py  schema.py  state.py
src/nodes/: generate_report.py  generate_sections.py  section_writer.py  synthesizer.py  write_section.py
src/nodes/research_agent/: research_agent.py
src/nodes/research_agent/nodes/: generate_queries.py  web_research.py
